--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script>
         function init() {
-            require('./lib/main').init(window, document);
+            require('./app/main').init(window, document);
         }
     </script>
   </head>
