--- a/index.htm
+++ b/index.htm
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="assets/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script>
-        function init() {
-            require('./app/main').init(window, document);
-        }
+      function init() {
+        require('./app/main').init(window);
+      }
     </script>
   </head>
   <body onload='init();'></body>
