workspace manager can spawn workspaces! kernel.kill() woop!

--- a/app/tasks/WorkspaceManager/index.html
+++ b/app/tasks/WorkspaceManager/index.html
@@ -2,10 +2,10 @@
   <div class='workspaces' data-ui='workspaces'></div>
   <div class='status-bar'>
     <div class='workspace-controls'>
-      <a href='#' class='button fixed-width remove' data-ui='btnRemove buttons[]'>-</a>
-      <a href='#' class='button fixed-width add' data-ui='btnAdd buttons[]'>+</a>
+      <a href='#' class='button fixed-width remove' data-ui='btnDestroy buttons[]'>-</a>
+      <a href='#' class='button fixed-width add' data-ui='btnCreate buttons[]'>+</a>
     </div>
-    <div class='workspace-list' data-ui='workspaceList'></div>
+    <div class='workspace-list' data-ui='switcher'></div>
     <div class='accessories' data-ui='accessories'></div>
   </div>
 </div>
