workspace spawning working inc. multi-split panes

--- a/app/tasks/WorkspaceManager/index.html
+++ b/app/tasks/WorkspaceManager/index.html
@@ -1,11 +1,11 @@
 <div class='ob-workspace-manager'>
-  <div class='workspaces' data-ui='workspaces'></div>
+  <div class='workspaces' data-pluck='workspaces'></div>
   <div class='status-bar'>
     <div class='workspace-controls'>
-      <a href='#' class='button fixed-width remove' data-ui='btnDestroy buttons[]'>-</a>
-      <a href='#' class='button fixed-width add' data-ui='btnCreate buttons[]'>+</a>
+      <a href='#' class='button fixed-width remove' data-pluck='btnDestroy buttons[]'>-</a>
+      <a href='#' class='button fixed-width add' data-pluck='btnCreate buttons[]'>+</a>
     </div>
-    <div class='workspace-list' data-ui='switcher'></div>
-    <div class='accessories' data-ui='accessories'></div>
+    <div class='workspace-list' data-pluck='switcher'></div>
+    <div class='accessories' data-pluck='accessories'></div>
   </div>
 </div>
