--- a/app/tasks/Workspace/index.html
+++ b/app/tasks/Workspace/index.html
@@ -1,2 +1,9 @@
 <div class='ob-workspace'>
+  <div class='ob-toolbar'>
+    <div class='align-left'></div>
+    <div class='align-right'>
+      <div class='button'>+</div>
+      <div class='button'>-</div>
+    </div>
+  </div>
 </div>
